Wire objects into article template (basics)

--- a/templates/essays/article.html
+++ b/templates/essays/article.html
@@ -14,8 +14,26 @@ Previously this was for articles profiling the protagonists of The Wizard of Oz 
 -->
 
 {% extends 'base.html' %}
-    
+
+{% load static %}
+{% block extra_head %}
+  <link rel="stylesheet" href="{% static 'css/random-normalize.css' %}">
+  <link rel="stylesheet" href="{% static 'css/random-main.css' %}">
+{% endblock %}
 {% block content %}    
     
+    {% if articles %}
+
+        {% for article in articles %}    
+
+            <h4>{{ article.title}} </h4>
+            {{ article.content|safe }}  
+            
+            
+
+
+        {% endfor %}
+
+    {% endif %}
 
 {% endblock %}    
