Initialize content_changelog template

--- a/templates/essays/content_changelog.html
+++ b/templates/essays/content_changelog.html
@@ -1,7 +1,15 @@
-{% extends 'base.html' %}
-    
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="robots" content="noindex,nofollow" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% load static %}
+
 {% block content %}    
 
- This template is a very basic webpage (almost like a simple blog post which shows all the changes made by the author to any of the essays or other written content -->
+ This template is a very basic webpage (almost like a simple blog post which shows all the changes made by the author to any of the essays or other written content
 
  {% endblock %}    
