added all the requirements

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
   <script src="{% static 'js/bootstrap.bundle.min.js' %} "></script>
   <script src="{% static 'js/lightbox.min.js' %} "></script>
   <script src="{% static 'js/main.js' %} "></script>
-
+  <script src="{% static 'js/at_random.js' %} "></script>
 </body>
 
 </html>
