Add placeholder content

--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -24,7 +24,7 @@
       <div class="wrapper star">
         <section class="general">
 
-          <h1 class="key">Key {{ generator.number }}: {{ generator.title }} </h1>
+          <h1 class="key">Card {{ generator.number }}: {{ generator.title }} </h1>
 
 
           <img src="{{ generator.tarot_card_image }}" alt="tarot key" />
