--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -4,13 +4,17 @@
 {% block extra_head %}
 <link rel="stylesheet" href="{% static 'css/random-normalize.css' %}">
 <link rel="stylesheet" href="{% static 'css/random-main.css' %}">
+<!-- Begin Carousel includes -->
 <link rel="stylesheet" href="{% static 'css/carousel.css' %}">
+<script src="{% static 'js/carousel.js' %}" defer></script>
+<!-- End Carousel includes -->
 {% endblock %}
 {% block content %}
 
 
-<!-- Carousel -->
+<!-- Begin Carousel code -->
 <div class="carousel">
+
 
   {% if cards %}
   <div class="carousel_track-container">
@@ -25,6 +29,7 @@
   {% endif %}
 
 </div>
+<!-- End Carousel code -->
 
 {% comment %} <a class="btn third random-card">Pull Card At Random</a> {% endcomment %}
 {% if next_card_number %}
