--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -38,14 +38,20 @@
           </ul>
 
           <ul class="esoteric-attributes"> 
-            <li> <strong>Mode</strong>: <button 
-             
-            class="regular-btn btn-xs btn-danger">Regular</button> or <button  class="study-btn btn-xs btn-danger">Study</button></li>
+            <li> <strong>Mode</strong>: 
+            <button class="regular-btn btn-xs btn-danger">Regular</button> or <button  class="study-btn btn-xs btn-danger">Study</button>
+            </li>
           </ul>
-
-          <p>{{ generator.description|safe }} </p>
-
         </section>  <!-- end general -->
+          <p class="content">{{ generator.description|safe }} </p>
+          
+          <ul class="bullets">
+              {% for point in generator.description_to_bullet %}
+                <li>{{point}}</li>
+              {% endfor %}
+            </ul> 
+
+
 
         <h1 class="key">Select your narrative:</h1>
 
