disable drag, no ghost on images

--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -25,7 +25,7 @@
         {% else %}
         <li class="carousel_slide">
         {% endif %}
-          <img class="carousel_image" src="{{ card.tarot_card_image }}" alt="tarot key" />
+          <img class="carousel_image" src="{{ card.tarot_card_image }}" alt="tarot key" draggable="false" />
         </li>
       {% endfor %}
     </ul>
