--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -139,7 +139,7 @@ img {
 }
 
 .text-white {
-  color: crimson !important;
+  color: white !important;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
