Add 'location' font awesome icon (doesn't work)

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
   
   <!-- For at_random/about/essay content -->
   {% block extra_head %}{% endblock %}
+
+  <script src="https://kit.fontawesome.com/9a80da2fe7.js" crossorigin="anonymous"></script>
+  
   <meta name="theme-color" content="#fafafa">
   
   <title>Tarot Juicer</title>
