--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -8,9 +8,8 @@
     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
         <br /> 
         <br /> 
-    Pulu Amsic Drive, Angeles, Pampanga, Philippines
+    <i class="fab fa-compass">Pulu Amsic Drive, Angeles, Pampanga, Philippines</i>
         <br /> <br /> 
-    
     </div>
 
 </footer>
