--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -5,6 +5,7 @@
 {% block extra_head %}
   <link rel="stylesheet" href="{% static 'css/random-normalize.css' %}">
   <link rel="stylesheet" href="{% static 'css/random-main.css' %}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 {% endblock %}
 
 {% block content %}    
@@ -44,7 +45,7 @@
 
         </section>  <!-- end general -->
 
-          <p class="content">{{ generator.description|safe }} </p>
+          <p class="content animated rubberBand">{{ generator.description|safe }} </p>
           
           <ul class="bullets">
               {% for point in generator.description_to_bullet %}
@@ -69,7 +70,7 @@
 
           <div id="galileo-content" class="narrative-h1s"> 
             <h1 class="narrative-h1s">Galileo</h1>
-            <p class="content"> {{ generator.galileo_content|safe }} </p>
+            <p class="content animated bounceInRight"> {{ generator.galileo_content|safe }} </p>
             <ul class="bullets">
               {% for point in generator.galileo_to_bullet %}
                 <li>{{point}}</li>
@@ -81,7 +82,7 @@
 
           <div id="f-loss-content"> 
             <h1 class="narrative-h1s">F/LOSS</h1>
-            <p class="content">{{ generator.f_loss_content|safe }}</p>
+            <p class="content animated bounceInRight">{{ generator.f_loss_content|safe }}</p>
             <ul class="bullets">
               {% for point in generator.f_loss_to_bullet %}
                 <li>{{point}}</li>
@@ -91,7 +92,7 @@
 
           <div id="st-paul-content"> 
             <h1 class="narrative-h1s">St. Paul</h1>
-            <p class="content">{{ generator.st_paul_content|safe }}</p>        
+            <p class="content animated bounceInRight">{{ generator.st_paul_content|safe }}</p>        
               <ul class="bullets">
               {% for point in generator.paul_to_bullet %}
                 <li>{{point}}</li>
