--- a/tarot_juicer/static/css/carousel.css
+++ b/tarot_juicer/static/css/carousel.css
@@ -1,49 +1,41 @@
+:root {
+    --number-cards: 4;
+    --flex-basis: calc(100% / var(--number-cards));
+}
 
-/* main div that contains the carousel */
 .carousel {
-    position: relative;
     width: 75%;
     height: 300px;
     margin: 0 auto;
-
-}
-
-/* div that contains the carousel track */
-.carousel_track-container {
-    position: relative;
-    height: 100%;
-    left: 50%;
-    transform: translateX(-50%)
-}
-
-/* ul - contains tracks as li */
-.carousel_track {
-    position: relative;
-    height: 100%;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+    border: 2px solid orange;
+    display: flex;
+    justify-content: flex-start;
     overflow: hidden;
-
 }
 
-/* li one per slide / image */
-.carousel_slide {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    margin: 15px;
-
-
-}
-
-/* Individual img contained in slide */
-.carousel_image {
+/* contains the slides */
+.carousel_slider {
+    position: relative;
+    display: flex;
+    width: 100%;
     height: 100%;
-    width: auto;
-    cursor: grab;
+    align-items: center;
 }
+
+/* each slide is a flex child, acts as cell to contain images */
+.slide {
+    flex: 1 0 var(--flex-basis); /* was shrink 1 */
+    min-width: 100px;
+}
+
+/* individual slide image / card */
+.carousel_slider img {
+    padding: 5px;
+    min-width: 100px;
+}
+
+
+
 
 /* Reference only, delete this
 section.general img {
