--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -80,7 +82,7 @@ canvas {
   font-weight: 600;
   font-size: 60px;
   padding-top: 100px;
-  padding-bottom: 35px;
+  padding-bottom: 0px;
   margin: 0;
   line-height: 135%;
   text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 30px #fff, 0 0 20px white;
@@ -159,8 +161,10 @@ h2 {color: white;}
 <div class="title">
     
     <!-- Original concept borrowed from Marco Dell'Anna in a CodePen titled ALIEN - Deviation of microcosm, source: https://codepen.io/plasm/pen/JNPXxg  -->
-
+    
     <h1>GLOBAL INITIATION</h1>
+    
+    <center><img width="15%" src="{% static 'img/compass1-black-with-blur4.png' %}"></center>
 
     <!-- To F/LOSS/GG index.html export:  -->
     <h3><a href="#">@ SLASHDOT</a></h3> 
@@ -175,10 +179,12 @@ h2 {color: white;}
     <h3><a href="#">@ AMERIKA</a></h3> 
 
     <!-- Q: -->
-    <h3><a href="https://twitter.com/hashtag/qanon?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Ehashtag">#QAnon</a></h3> 
+    <h3><a href="https://twitter.com/hashtag/qanon">#QAnon</a></h3> 
     
       <br />
-    
+      <center><img width="5%" src="{% static 'img/crimson-pentavcle-wtih-grey.gif' %}" /></center>
+      <br />
+
     <!-- To landing page explaining "why" and "what" of this website:  -->
     <h3><a href="{% url 'about' %}">(About)</a></h3> 
     
