Replace bounceInRight animation with fadeInLeftBig

--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -70,7 +70,7 @@
 
           <div id="galileo-content" class="narrative-h1s"> 
             <h1 class="narrative-h1s">Galileo</h1>
-            <p class="content animated bounceInRight"> {{ generator.galileo_content|safe }} </p>
+            <p class="content animated fadeInLeftBig"> {{ generator.galileo_content|safe }} </p>
             <ul class="bullets">
               {% for point in generator.galileo_to_bullet %}
                 <li>{{point}}</li>
@@ -82,7 +82,7 @@
 
           <div id="f-loss-content"> 
             <h1 class="narrative-h1s">F/LOSS</h1>
-            <p class="content animated bounceInRight">{{ generator.f_loss_content|safe }}</p>
+            <p class="content animated fadeInLeftBig">{{ generator.f_loss_content|safe }}</p>
             <ul class="bullets">
               {% for point in generator.f_loss_to_bullet %}
                 <li>{{point}}</li>
@@ -92,7 +92,7 @@
 
           <div id="st-paul-content"> 
             <h1 class="narrative-h1s">St. Paul</h1>
-            <p class="content animated bounceInRight">{{ generator.st_paul_content|safe }}</p>        
+            <p class="content animated fadeInLeftBig">{{ generator.st_paul_content|safe }}</p>        
               <ul class="bullets">
               {% for point in generator.paul_to_bullet %}
                 <li>{{point}}</li>
