--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="{% static 'css/random-normalize.css' %}">
   <link rel="stylesheet" href="{% static 'css/random-main.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+  <style> /*img#no-shadow,#squad_grey {
+     box-shadow:none;
+     }*/
+  </style>
 {% endblock %}
 
 {% block content %}    
@@ -69,7 +73,7 @@
         </ul>
 
           <div id="galileo-content" class="narrative-h1s"> 
-            <h1 class="narrative-h1s">Galileo</h1>
+            <h1 class="narrative-h1s fadeInLeftBig">Galileo</h1>
             <p class="content animated fadeInLeftBig"> {{ generator.galileo_content|safe }} </p>
             <ul class="bullets">
               {% for point in generator.galileo_to_bullet %}
@@ -81,7 +85,7 @@
           {% comment %} {{ generator.galileo_bullets|safe }} {% endcomment %}
 
           <div id="f-loss-content"> 
-            <h1 class="narrative-h1s">F/LOSS</h1>
+            <h1 class="narrative-h1s fadeInLeftBig">F/LOSS</h1>
             <p class="content animated fadeInLeftBig">{{ generator.f_loss_content|safe }}</p>
             <ul class="bullets">
               {% for point in generator.f_loss_to_bullet %}
@@ -91,7 +95,7 @@
           </div> <!-- end  f-loss-content -->
 
           <div id="st-paul-content"> 
-            <h1 class="narrative-h1s">St. Paul</h1>
+            <h1 class="narrative-h1s fadeInLeftBig">St. Paul</h1>
             <p class="content animated fadeInLeftBig">{{ generator.st_paul_content|safe }}</p>        
               <ul class="bullets">
               {% for point in generator.paul_to_bullet %}
